# olcCodeJam2022

./: Engine.cpp  Engine.h  copy_resources.py  main.cpp  meson.build
AssetSystem/: SpriteManager.cpp  SpriteManager.h
DialogueSystem/: Dialogue.cpp  Dialogue.h
NodeSystem/: AddNode.cpp  AddNode.h  AndNode.cpp  AndNode.h  BiggerNode.cpp  BiggerNode.h  Board.cpp  Board.h  CloudNode.cpp  CloudNode.h  Connection.cpp  Connection.h  ConstantNode.cpp  ConstantNode.h  DirectionNode.cpp  DirectionNode.h  DivideNode.cpp  DivideNode.h  EqualNode.cpp  EqualNode.h  EvaluationResult.cpp  EvaluationResult.h  Evaluator.cpp  Evaluator.h  IfNode.cpp  IfNode.h  InputPin.cpp  InputPin.h  InputType.h  LocationNode.cpp  LocationNode.h  MultiplyNode.cpp  MultiplyNode.h  Node.cpp  Node.h  NodePin.cpp  NodePin.h  OrNode.cpp  OrNode.h  OutputPin.cpp  (+22 more)
Scene/: Airplane.cpp  Airplane.h  Field.cpp  Field.h
Utils/: Constants.h  Drawing.cpp  Drawing.h  FadeOut.cpp  FadeOut.h  Math.cpp  Math.h
res/levels/: AnnoyingParty.txt  levels.txt
